Slightly match colors with kitty since those are my favourite of all

--- a/.config/hypr/theme.css
+++ b/.config/hypr/theme.css
@@ -1,7 +1,7 @@
-@define-color main-bg #1e1e1e;
-@define-color main-fg #d7d7d7;
+@define-color main-bg #1e1e2e;
+@define-color main-fg #f8f8f2;
 
-@define-color border-main #6a6a6a;
+@define-color border-main #3b4252;
 
 @define-color accent-active #007aff;
 
